[gd_scene load_steps=6 format=3 uid="uid://0cbot3g0xn1b"]

[ext_resource type="Script" path="res://HUD.gd" id="1_ds1ti"]
[ext_resource type="Texture2D" uid="uid://bdgptnwbh1c8n" path="res://Objects/bluetooth below.png" id="2_vbk7a"]
[ext_resource type="Texture2D" uid="uid://du1dgcbq74qwa" path="res://Objects/bluetooth dish.png" id="3_ucssl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2rfbt"]
bg_color = Color(0.169245, 0.169245, 0.169245, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qb6jc"]
bg_color = Color(0.420918, 0.956153, 0.883453, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ds1ti")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 450.0
offset_top = 40.0
offset_right = 463.95
offset_bottom = 48.32
scale = Vector2(18.0887, 13.9327)
color = Color(0.169847, 0.172269, 0.184401, 0.647059)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
offset_left = 470.0
offset_top = 460.0
offset_right = 682.0
offset_bottom = 550.0
scale = Vector2(1, 1.00267)
color = Color(0.169847, 0.172269, 0.184401, 0.647059)

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -419.0
offset_top = -129.0
offset_right = 419.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 0

[node name="Intel i5 8th gen processor un-fuck-uper" type="Label" parent="Health"]
modulate = Color(1, 1, 1, 0.0705882)
layout_mode = 0
offset_left = 180.0
offset_top = 15.0
offset_right = 220.0
offset_bottom = 38.0
text = "-"

[node name="HealthBar" type="ProgressBar" parent="Health"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -2.0
offset_right = 142.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_2rfbt")
theme_override_styles/fill = SubResource("StyleBoxFlat_qb6jc")
max_value = 1.0
value = 0.36
show_percentage = false

[node name="Game_over" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Game_over"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.829
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.00567, 1)

[node name="Button" type="Button" parent="Game_over/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
text = "Play again"

[node name="Button2" type="Button" parent="Game_over/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
text = "Main menu"

[node name="Label" type="Label" parent="Game_over"]
layout_mode = 0
offset_top = 458.0
offset_right = 23020.0
offset_bottom = 1618.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 700
text = "Play again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Game_over"]
layout_mode = 0
offset_top = 481.0
offset_right = 23020.0
offset_bottom = 2061.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/font_size = 700
text = "Main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Game_over"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 0.329
offset_bottom = 50.0
grow_horizontal = 2

[node name="Label3" type="Label" parent="Game_over/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "High Score: 150"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Game_over/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Score : 23"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Bluetooth" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.0
offset_right = 159.0
offset_bottom = 105.0
grow_horizontal = 2

[node name="A" type="TextureProgressBar" parent="Bluetooth"]
layout_mode = 0
offset_left = 8.0
offset_top = 10.0
offset_right = 31.0
offset_bottom = 36.0
scale = Vector2(2, 2)
max_value = 1.0
step = 0.0
value = 1.0
fill_mode = 3
texture_under = ExtResource("2_vbk7a")
texture_progress = ExtResource("3_ucssl")

[node name="Label" type="Label" parent="Bluetooth/A"]
layout_mode = 0
offset_left = -10.0
offset_top = 18.0
offset_right = 30.0
offset_bottom = 41.0
text = "A"
horizontal_alignment = 1

[node name="B" type="TextureProgressBar" parent="Bluetooth"]
layout_mode = 0
offset_left = 264.0
offset_top = 10.0
offset_right = 287.0
offset_bottom = 36.0
scale = Vector2(2, 2)
max_value = 1.0
step = 0.0
value = 1.0
fill_mode = 3
texture_under = ExtResource("2_vbk7a")
texture_progress = ExtResource("3_ucssl")

[node name="Label" type="Label" parent="Bluetooth/B"]
layout_mode = 0
offset_left = -10.0
offset_top = 18.0
offset_right = 30.0
offset_bottom = 41.0
text = "B"
horizontal_alignment = 1

[connection signal="pressed" from="Game_over/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Game_over/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
